Alteração nas imagens01

--- a/css/style.css
+++ b/css/style.css
@@ -628,12 +628,25 @@ label,.form-section h2{
     border-bottom-left-radius:105px;
     border-bottom-right-radius: 105px;
     .form-section{
+      width: 350px;
+      label{
+        font-size: 12px;
+      }
     width: 350px;
+    .form-group input[type="text"],
+    .form-group input[type="email"],
+    .form-group textarea{
+      padding: 5px 3px;
+    
+    }
+     .form-group input[type="email"]{
+      width: 100%;
+    }
     }
     .image-section{
       img{
         margin: 20px 0;
-        width: 350px;
+        width: 300px;
       }
     }
   }
