--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
@@ -224,6 +225,66 @@ section.sobre-nos {
   border-radius: 20px;
   object-fit: cover;
 }
+.secao-grama {
+  padding: 40px 20px;
+  background-color: #f9f9f9;
+
+}
+
+.conteudo-grama {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 200px;
+
+
+}
+
+.galeria-grama {
+  flex: 1 1 15%;
+  height: 350px;
+  gap: 15px;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto auto;
+}
+
+.galeria-grama img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+/* Layout das imagens */
+.galeria-grama img:nth-child(1) { grid-column: 1 / 2; grid-row: 1 / 2; }
+.galeria-grama img:nth-child(2) { grid-column: 2 / 3; grid-row: 1 / 2; }
+.galeria-grama img:nth-child(3) { grid-column: 3 / 5; grid-row: 1 / 2; }
+.galeria-grama img:nth-child(4) { grid-column: 1 / 3; grid-row: 2 / 3; }
+.galeria-grama img:nth-child(5) { grid-column: 3 / 5; grid-row: 2 / 3; }
+
+.texto-grama {
+  flex: 1 1 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.texto-grama h2 {
+  font-size: 40px;
+  color: #2f4f1f;
+  margin-bottom: 20px;
+}
+
+.texto-grama p {
+  font-size: 15px;
+  color: #444;
+  margin-bottom: 15px;
+  line-height: 1.6;
+}
+
+
 
 .gramas {
   width: 100%;
@@ -238,26 +299,25 @@ section.sobre-nos {
 }
 
 .nossasGramas {
-  position: absolute;
-  margin-top: 380px;
-  right: 8%;
-
+  display: flex;
+  justify-content: center;
+  text-align: center;
 
   h1 {
-    font-size: 70px;
-    color: white;
+    font-size: 40px;
+    color: #085e23;
   }
 }
 
 .cards {
-  margin: 60px 0 ;
+  margin: 20px 0 ;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   gap: 80px;
   padding: 40px;
 
-  background-color: #ffffff;
+
 }
 
 .card {
@@ -533,10 +593,12 @@ label,.form-section h2{
   .hero{
     width: 100%;
     margin: 0px 15px;
-    flex-direction: column;
+    flex-direction: column-reverse;
     text-align: center;
     .hero-image img{
-      width: 350px;
+      width: 360px;
+      padding: 20px 0;
+
     }
     .hero-text{
       width: 100%;
@@ -550,7 +612,9 @@ label,.form-section h2{
     padding: 10px 15px;
     flex-direction: column;
     .content-sobre{
-      .left img{
+      .left{
+        width: 100%;
+      } img{
         width: 350px;
         margin: 20px 0;
 
@@ -585,11 +649,13 @@ label,.form-section h2{
     width: 350px;
   }
   .beneficios{
+    display: flex;
+    align-items: center;
   span{
     font-size: 12px;
   }
   .box{
-    padding: 7px 5px;
+    padding: 10px 7px;
   }
   img{
     width: 20px;
@@ -601,9 +667,14 @@ label,.form-section h2{
     width: 350px;
   }
 }
+.conteudo-grama{
+  flex-direction: column;
+  text-align: center;
+  gap: 20px;
+}
 .gramas{
   .nossasGramas{
-    margin-top: 100px;
+
    
     h1{
       font-size: 30px;
@@ -611,22 +682,36 @@ label,.form-section h2{
     }
   }
   }
-  .cards{
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 35px;
-    padding: 0px;
-    margin: 20pxpx 50px;
-    .card{
-      width: 300px;
-    }
+  .carousel {
+    overflow-x: auto;
+    scroll-snap-type: none;
+    padding: 40px 0;
+
   }
+  .cards {
+    display: flex;
+    gap: 20px;
+    padding: 0 16px;
+    margin: 0;
+    width: max-content;
+  }
+  
+  .card {
+    flex: 0 0 80%;
+    max-width: 300px;
+    scroll-snap-align: center;
+
+    border-radius: 10px;
+    padding: 1rem;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  }
+  
   .containerContato{
     padding: 30px 20px;
     flex-direction: column;
-    border-bottom-left-radius:105px;
-    border-bottom-right-radius: 105px;
+    border-bottom-left-radius:85px;
+    border-bottom-right-radius: 85px;
     .form-section{
       width: 350px;
       label{
