--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,10 @@
 
 body {
   font-family: "Playfair Display", serif;
-  color: #1f4f1f;
+  color: #128c39;
   background-color: #d2dddd;
-
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 header {
@@ -51,8 +52,15 @@ nav a {
   text-decoration: none;
   font-weight: 500;
   font-size: 13px;
+  transition: 1s;
 }
-.botaoContato button{
+
+nav a:hover {
+  transform: scale(1.05);
+  color: #217244;
+}
+
+.botaoContato button {
   border: none;
   background-color: #128c39;
   color: white;
@@ -61,14 +69,23 @@ nav a {
   text-decoration: none;
   font-weight: bold;
   display: inline-block;
+  transition: 2s;
 }
+
+.botaoContato button:hover,
+.btn:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+  background-color: #217244;
+}
+
 .hero {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0px 0px;
   margin: auto;
-  margin: 0 120px;
+  margin: 80px 120px;
 }
 
 .hero-text {
@@ -101,6 +118,7 @@ nav a {
   text-decoration: none;
   font-weight: bold;
   display: inline-block;
+  transition: 2s;
 }
 
 .hero-image img {
@@ -123,7 +141,7 @@ section.sobre-nos {
 .content-sobre {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+
   align-items: center;
   margin-bottom: 50px;
 }
@@ -138,7 +156,7 @@ section.sobre-nos {
 }
 
 .right {
-  width: 600px;
+  width: 50%;
 
   img {
     width: 600px;
@@ -167,7 +185,6 @@ section.sobre-nos {
 
 .confiar-container {
   display: flex;
-  flex-wrap: wrap;
   align-items: flex-start;
   gap: 40px;
 }
@@ -179,7 +196,7 @@ section.sobre-nos {
 
 .confiar-texto h2 {
   font-size: 3.2rem;
-  color: #1f4d1c;
+  color: #128c39;
   margin-bottom: 15px;
 }
 
@@ -219,12 +236,16 @@ section.sobre-nos {
   font-weight: 500;
 }
 
+.confiar-imagem {
+  width: 50%;
+}
 
 .confiar-imagem img {
-  width: 600px;
+  width: 100%;
   border-radius: 20px;
   object-fit: cover;
 }
+
 .secao-grama {
   padding: 40px 20px;
   background-color: #f9f9f9;
@@ -233,9 +254,8 @@ section.sobre-nos {
 
 .conteudo-grama {
   display: flex;
-  flex-wrap: wrap;
   column-gap: 200px;
-
+  align-items: center;  
 
 }
 
@@ -254,18 +274,37 @@ section.sobre-nos {
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Layout das imagens */
-.galeria-grama img:nth-child(1) { grid-column: 1 / 2; grid-row: 1 / 2; }
-.galeria-grama img:nth-child(2) { grid-column: 2 / 3; grid-row: 1 / 2; }
-.galeria-grama img:nth-child(3) { grid-column: 3 / 5; grid-row: 1 / 2; }
-.galeria-grama img:nth-child(4) { grid-column: 1 / 3; grid-row: 2 / 3; }
-.galeria-grama img:nth-child(5) { grid-column: 3 / 5; grid-row: 2 / 3; }
+.galeria-grama img:nth-child(1) {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.galeria-grama img:nth-child(2) {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.galeria-grama img:nth-child(3) {
+  grid-column: 3 / 5;
+  grid-row: 1 / 2;
+}
+
+.galeria-grama img:nth-child(4) {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+
+.galeria-grama img:nth-child(5) {
+  grid-column: 3 / 5;
+  grid-row: 2 / 3;
+}
 
 .texto-grama {
-  flex: 1 1 15%;
+  flex: 1 1 25%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -273,7 +312,7 @@ section.sobre-nos {
 
 .texto-grama h2 {
   font-size: 40px;
-  color: #2f4f1f;
+  color: #128c39;
   margin-bottom: 20px;
 }
 
@@ -305,12 +344,12 @@ section.sobre-nos {
 
   h1 {
     font-size: 40px;
-    color: #085e23;
+    color: #128c39;
   }
 }
 
 .cards {
-  margin: 20px 0 ;
+  margin: 20px 0;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -326,8 +365,16 @@ section.sobre-nos {
   border: 1px solid #cce4d6;
   border-radius: 20px;
   overflow: hidden;
-  box-shadow: 0 0  18px 0 rgba(0, 0, 0, 0.274);
+  box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.274);
   text-align: center;
+  transition: 1s;
+}
+
+.card:hover,
+.card:focus {
+  transform: scale(1.04);
+  background-color: #f0ffdf;
+  cursor: pointer;
 }
 
 .card img {
@@ -400,9 +447,12 @@ section.sobre-nos {
   resize: vertical;
   min-height: 80px;
 }
-label,.form-section h2{
+
+label,
+.form-section h2 {
   color: white;
 }
+
 .inline-inputs {
   display: flex;
   gap: 20px;
@@ -412,6 +462,7 @@ label,.form-section h2{
 .inline-inputs .form-group {
   flex: 1;
 }
+
 .submit-button {
   background-color: white;
   color: #38761d;
@@ -423,19 +474,22 @@ label,.form-section h2{
   font-weight: bold;
   transition: 1s;
 }
-.submit-button:hover{
-  transform: scale(1.03);
+
+.submit-button:hover {
+  transform: scale(1.01);
   background-color: rgb(156, 241, 161);
 }
+
 .image-section {
 
   display: flex;
   justify-content: right;
   align-items: center;
+  width: 50%;
 }
 
 .image-section img {
-  width: 450px;
+  width: 70%;
   border-radius: 8px;
   margin-bottom: 85px;
   /* Opcional: para arredondar as bordas da imagem */
@@ -453,7 +507,7 @@ label,.form-section h2{
 }
 
 .feedback-container {
-  
+
   display: flex;
   gap: 20px;
   padding: 30px;
@@ -506,13 +560,15 @@ label,.form-section h2{
   text-align: right;
 }
 
- .feed,.faq-container h2 {
-  color: #2e8b57; 
+.feed,
+.faq-container h2 {
+  color: #2e8b57;
   text-align: center;
   margin: 50px;
-  font-size: 30px ;
+  font-size: 30px;
   text-align: center;
 }
+
 .faq-container {
   display: flex;
   justify-content: center;
@@ -540,12 +596,13 @@ label,.form-section h2{
   display: flex;
   align-items: center;
   font-size: 16px;
+  text-transform: uppercase;
 }
 
 .question::before {
   content: "▼";
   margin-right: 8px;
-  font-size: 1.6em;
+  font-size: 1.2em;
 }
 
 .answer {
@@ -567,139 +624,216 @@ label,.form-section h2{
   padding: 15px;
   height: 40;
 }
+@media (max-width: 1500px) {
 
-@media (max-width: 500px) {
-  header{
-    display: flex;
-    margin: 20px 15px;
+  header {
+    margin: 20px 40px;
   }
-  .botaoContato{
-    display: none;
-  }
-  .logo{
-    span{
-      display: none;
+
+  .hero {
+    margin: 0 40px;
+
+    .hero-image img {
+      width: 400px;
     }
   }
-  nav{
-    gap: 20px;
+
+  .hero-text h1 {
+    font-size: 40px;
+  }
+
+  section.sobre-nos {
+    padding: 40px 40px;
+  }
+
+  .content-sobre {
+    gap: 50px;
+
+    .left img {
+      width: 100%;
+    }
+
+    p {
+      font-size: 15px;
+    }
+  }
+
+  .right h2,
+  .confiar-texto h2 {
+    font-size: 2.4rem;
+
+  }
+
+  .conteudo-grama {
+
+    column-gap: 50px;
+  }
+
+  .containerContato {
+    padding: 0 40px;
+    gap: 50px;
+  }
+
+  .faq-container {
+    padding: 0 40px;
+  }
+
+}
+@media (max-width: 400px) {
+  header {
+    margin: 10px 0px;
+  }
+
+  nav a {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    justify-content: center;
+    margin: 20px 8px;
+    padding: 5px;
+
+  }
+
+  nav {
+    gap: 14px;
     align-items: center;
   }
-  nav a{
+
+  nav a {
     margin: 0;
     font-size: 12px;
     text-align: center;
   }
-  .hero{
+
+  .hero {
     width: 100%;
-    margin: 0px;
-    flex-direction: column-reverse;
-    text-align: center;
+    margin: 0px 0;
     .hero-image {
       display: flex;
-      justify-content: center;  
-    }    
-      img{
-      width: 360px;
-      padding: 20px 0;
+      justify-content: center;
+
+      img {
+        width: 300px;
+        padding: 20px 0;
+
+      }
+    }
+
+    h1 {
+      font-size: 35px;
+
 
     }
-    .hero-text{
-      width: 100%;
-    } h1{
-      font-size: 35px;
-      
-    
-    }
   }
-  section.sobre-nos{
+
+  section.sobre-nos {
     padding: 10px 15px;
-    flex-direction: column;
-    .content-sobre{
-      .left{
+
+
+    .content-sobre {
+      .left {
         width: 100%;
-      } img{
+      }
+
+      img {
         width: 350px;
         margin: 20px 0;
 
       }
-      .right{
+
+      .right {
         width: 100%;
         text-align: center;
-        h2{
+
+        h2 {
           font-size: 25px;
         }
-        p{
-        font-size: 15px;
-      }}
-      
+
+        p {
+          font-size: 15px;
+        }
+      }
+
     }
   }
-  .confiar{
+
+  .confiar {
     padding: 10px 0;
-    justify-content: center;
-    .confiar-container{
-      justify-content: center;
-      flex-direction: column-reverse;
-      align-items: center;
-    }
-    text-align: center;
-    .confiar-texto{
-      h2{
+
+
+    .confiar-texto {
+      h2 {
         font-size: 25px;
       }
     }
-  img{
-    width: 350px;
-  }
-  .beneficios{
-    display: flex;
-    align-items: center;
-  span{
-    font-size: 12px;
-  }
-  .box{
-    padding: 10px 7px;
-  }
-  img{
-    width: 20px;
-    height: 20px;
-  }}
-  .confiar-imagem{
-    display: flex;
-    justify-content: center;
-    width: 350px;
-  }
-}
-.conteudo-grama{
-  flex-direction: column;
-  text-align: center;
-  gap: 20px;
-}
-.gramas{
-  .nossasGramas{
 
-   
-    h1{
-      font-size: 30px;
-      top: 50%;
+    img {
+      width: 350px;
+    }
+
+    .beneficios {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 93%;
+
+      span {
+        font-size: 12px;
+      }
+
+      .box {
+        padding: 10px 7px;
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+
+    .confiar-imagem {
+      display: flex;
+      justify-content: center;
+      width: 350px;
     }
   }
+
+  .conteudo-grama {
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
   }
+
+  .gramas {
+    .nossasGramas {
+
+
+      h1 {
+        font-size: 30px;
+        top: 50%;
+      }
+    }
+  }
+
   .carousel {
     overflow-x: auto;
     scroll-snap-type: none;
     padding: 40px 0;
-
+    text-align: center;
   }
+
   .cards {
     display: flex;
     gap: 20px;
     padding: 0 16px;
-    margin: 0;
-    width: max-content;
+    margin: 0;   
+     text-align: center;
   }
-  
+
   .card {
     flex: 0 0 80%;
     max-width: 300px;
@@ -708,42 +842,155 @@ label,.form-section h2{
     border-radius: 10px;
     padding: 1rem;
     text-align: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-  
-  .containerContato{
+
+  .containerContato {
     padding: 30px 20px;
+
     flex-direction: column;
-    border-bottom-left-radius:85px;
+    border-bottom-left-radius: 85px;
     border-bottom-right-radius: 85px;
-    .form-section{
+
+    .form-section {
       width: 350px;
-      label{
+      margin-top: 30px;
+      label {
         font-size: 12px;
       }
-    width: 350px;
-    .form-group input[type="text"],
-    .form-group input[type="email"],
-    .form-group textarea{
-      padding: 5px 3px;
-    
+
+
+      .form-group input[type="text"],
+      .form-group input[type="email"],
+      .form-group textarea {
+        padding: 5px 3px;
+
+      }
+
+      .form-group input[type="email"] {
+        width: 100%;
+      }
     }
-     .form-group input[type="email"]{
-      width: 100%;
-    }
-    }
-    .image-section{
-      img{
+
+    .image-section {
+      img {
         margin: 20px 0;
         width: 300px;
       }
     }
   }
-  .feedback-container{
+
+  .feedback-container {
     padding: 10px;
     flex-direction: column;
   }
-  .faq-container{
+
+  .faq-container {
     padding: 5px 50px;
+  }
+}
+@media (max-width: 850px) {
+    .botaoContato{
+      display: none;
+    }
+    .logo{
+      span{
+        display: none;
+      }
+    }
+    .hero{
+      flex-direction: column-reverse;
+      text-align: center;
+      .hero{
+        margin: 0;
+      }
+      .hero-text{
+        width: 100%;
+        h1{
+          font-size: 55px;
+        }
+      }
+    }
+    section.sobre-nos{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding: 0 0;
+      text-align: center;
+      .content-sobre{
+        flex-direction: column;
+        .left{
+          width: 100%;
+        }
+        .right{
+          width: 100%;
+          h2{
+            font-size: 3rem;
+          }
+          p{
+            font-size: 20px;
+          }
+          
+        }
+      }
+      
+    }
+    .confiar-container{
+      justify-content: center;
+      flex-direction: column-reverse;
+      align-items: center;
+      text-align: center;
+      .confiar-texto{
+        h2{
+          font-size: 3rem;
+        }
+        p{
+          font-size: 20px;
+        }
+      }
+      .confiar-imagem{
+        width: 100%;
+      }
+    }
+    .secao-grama{
+      .conteudo-grama{
+      flex-direction: column;
+      gap: 25px;
+    }
+  }
+  .texto-grama{
+    width: 100%;
+    h2{
+      font-size: 3rem;
+    }
+    p{
+      font-size: 20px;
+    }
+  }
+  .nossasGramas{
+    display: flex;
+    justify-content: center;
+  }
+  .cards{
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .containerContato{
+    flex-direction: column;
+    padding: 0 40px;
+    border-bottom-left-radius: 85px;
+    border-bottom-right-radius: 85px;
+  }
+  form{
+    padding-top: 20px;
+  }
+  .image-section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    img{
+      width: 60%;
+    }
   }
 }
