--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   overflow-x: hidden;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Playfair Display", serif;
@@ -722,6 +725,9 @@ label,
           font-size: 20px;
         }
         
+      }
+      .footer{
+        font-size: 15px;
       }
     }
     
