--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ header {
 nav {
   display: flex;
   justify-content: center;
+
 }
 
 nav a {
@@ -369,6 +370,7 @@ section.sobre-nos {
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.274);
+  border-top-left-radius: 30px;
   text-align: center;
   transition: 1s;
 }
@@ -812,7 +814,7 @@ form{
   }
 
   nav {
-    gap: 14px;
+    gap: 15px;
     align-items: center;
   }
 
